# rust-todo-api

./: README.md  docker-compose.yml
.github/workflows/: deployment.yml  rust.yml
deploy/: deploy.sh
todo-api/: Cargo.toml  Dockerfile  README.md
todo-api/src/: main.rs
todo-client/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
todo-client/src/: app.html  types.ts
todo-client/src/@types/: todo.d.ts
todo-client/src/components/: board.svelte  modal.svelte  todo-card-content.svelte
todo-client/src/hooks/: useTodos.ts
todo-client/src/routes/: +layout.svelte  +page.svelte  +page.ts  page.css
todo-client/src/routes/api/login/: +server.ts
todo-client/src/routes/api/todo/: +server.ts
todo-client/src/routes/api/todos/: +server.ts
todo-client/src/routes/board/: +page.svelte
todo-client/src/routes/kanban/: +page.svelte  +page.ts
todo-client/src/styles/: todo-card-content.css
