[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
nanoid = "0.4.0"
redis = "0.23.0"
serde = "1.0.164"
serde_json = "1.0.97"

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]

